# tracecat-custom-integrations

./: README.md  pyproject.toml
udfs/: __init__.py  greetings.py  hello.py  mapping.py  pyproject.toml
udfs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
