[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"

[project]
name = "udfs"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["rich>=13.8.1"]
dynamic = ["version"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "udfs/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["udfs"]
include = ["/udfs", "/udfs/**/*.yml"]

[project.optional-dependencies]
dev = [
    "tracecat_registry @ git+https://github.com/TracecatHQ/tracecat#subdirectory=registry&egg=tracecat_registry",
]
