[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"

[project]
name = "chanster_registry"  # This must be the same name as your package
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dynamic = ["version"]
dependencies = []  # Add your pip dependencies here

[tool.hatch.version]
path = "chanster_registry/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["chanster_registry"]
# Include YAML templates in pip package
include = ["/chanster_registry", "/chanster_registry/**/*.yml"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = ["tracecat @ git+https://github.com/TracecatHQ/tracecat"]
